kubernetes/cert.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  # 与 traefik 相同的命名空间， kubectl get pods -A | grep traefik
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
